python-apt (0.6.20ubuntu13) feisty; urgency=low

  * fix in the duplicated source checking (thanks to Sebastian Heinlein)

 --

python-apt (0.6.20ubuntu12) feisty; urgency=low

  * apt/cdrom.py:
    - fix bug in cdrom __init__ code
  * debian/rules:
    - added "DH_PYCENTRAL=nomove"


 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed,  7 Mar 2007 10:41:00 +0100

python-apt (0.6.20ubuntu11) feisty; urgency=low

  * apt/packages.py:
    - support candidateDependencies, installedDependencies
    - support pkg.architecture
    - support candidateRecord, installedRecord

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue,  6 Mar 2007 16:22:49 +0100

python-apt (0.6.20ubuntu10) feisty; urgency=low

  * debian/control:
    - added XS-Vcs-Bzr header to make finding the repo easier
  * apt/cache.py:
    - fix rootdir var

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu,  1 Mar 2007 14:36:33 +0100

python-apt (0.6.20ubuntu9) feisty; urgency=low

  * Re-add debian/python-apt.install (LP: #88134)
    - This seems to have gone missing between 0.6.20ubuntu6 and 0.6.20ubuntu8
    - This probably happened because it wasn't added to bzr

 -- Matt Zimmerman <mdz@ubuntu.com>  Mon, 26 Feb 2007 14:04:15 -0800

python-apt (0.6.20ubuntu8) feisty; urgency=low

  * fix FTBFS

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 26 Feb 2007 18:41:37 +0100

python-apt (0.6.20ubuntu7) feisty; urgency=low

  * aptsources/distro.py:
    - fix crash in add_source (LP#85806)
  * apt/package.py:
    - handle invalid unicode more gracefully (LP#86215)
  * rebuild against latest apt

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 26 Feb 2007 14:31:00 +0100

python-apt (0.6.20ubuntu6) feisty; urgency=low

  * Build the extension for the debug interpreter.
  * Set Ubuntu maintainer address.

 -- Matthias Klose <doko@ubuntu.com>  Sat, 17 Feb 2007 02:10:37 +0100

python-apt (0.6.20ubuntu5) feisty; urgency=low

  * be more robust in has_repository (LP#84897)
